added header to website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>NFA Based Document Text Search</title>
+  <!-- Bootstrap Style -->
+  <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
+  <!-- Bootstrap Style End -->
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="assets/style/style.css">
+  <!-- Custom CSS END -->
 </head>
+
 <body>
-  
+  <header>
+    <div class="section-header text-center jumbotron">
+      <div class="section-header-title">
+        <h1 class="display-3">NFA Based Document Text Search</h1>
+      </div>
+      <div class="section-header-content">
+        <p class="lead">By Group 6 & 8 - AI-A B2</p>
+      </div>
+    </div>
+  </header>
+
+
+  <!-- Jquery -->
+  <script src="assets/vendor/jquery/jquery-3.5.1.min.js"></script>
+  <!-- Jquery End -->
+
+  <!-- Bootstrap Script -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!-- Bootstrap Script End -->
+
+  <!-- Custom Script -->
+  <script src="assets/js/script.js"></script>
+  <!-- Custom Script End -->
 </body>
+
 </html>
