Changes File paths. Both Modules Working

--- a/assets/module2.html
+++ b/assets/module2.html
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-    <script src="./js/module2/index.js" type="module"></script>
+    <script src="/js/module2/index.js" type="module"></script>
 </body>
 
 </html>
